@@ -1,9 +1,10 @@
 {
-   "by-dist": "/by/dist/{dist}.json",
-   "by-extension": "/by/extension/{extension}.json",
-   "by-user": "/by/user/{user}.json",
-   "by-tag": "/by/tag/{tag}.json",
-   "dist": "/dist/{dist}/{version}/{dist}-{version}.pgz",
-   "meta": "/dist/{dist}/{version}/META.json",
-   "readme": "/dist/{dist}/{version}/README.txt"
+   "download":  "/dist/{dist}/{version}/{dist}-{version}.pgz",
+   "readme":    "/dist/{dist}/{version}/README.txt",
+   "meta":      "/dist/{dist}/{version}/META.json",
+   "dist":      "/dist/{dist}.json",
+   "extension": "/extension/{extension}.json",
+   "user":      "/user/{user}.json",
+   "tag":       "/tag/{tag}.json",
+   "mirrors":   "/meta/mirrors.json"
 }
