@@ -1,6 +1,8 @@
 Revision history for Perl extension PGXN::API
 
 0.6.3
+      - Updated for new URI template names in PGXN::Manager v0.10.4.
+      - Updated tests for new default metadata URI template paths.
 
 0.6.2   2011-03-26T05:29:36
       - Search requests go to /search instead of /by. The latter is used for
